brm-ui/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brm-ui-denizbank-ingress
  namespace: BRM
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ltbrm.apps.uat.deniz.denizbank.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: denizbank-ui
                port:
                  number: 80
